@@ -4772,7 +4772,7 @@ begin_comment
 comment|/*!     \class QPrintEngine     \reentrant      \ingroup printing     \inmodule QtPrintSupport      \brief The QPrintEngine class defines an interface for how QPrinter     interacts with a given printing subsystem.      The common case when creating your own print engine is to derive from both     QPaintEngine and QPrintEngine. Various properties of a print engine are     given with property() and set with setProperty().      \sa QPaintEngine */
 end_comment
 begin_comment
-comment|/*!     \enum QPrintEngine::PrintEnginePropertyKey      This enum is used to communicate properties between the print     engine and QPrinter. A property may or may not be supported by a     given print engine.      \value PPK_CollateCopies A boolean value indicating whether the     printout should be collated or not.      \value PPK_ColorMode Refers to QPrinter::ColorMode, either color or     monochrome.      \value PPK_Creator A string describing the document's creator.      \value PPK_Duplex A boolean value indicating whether both sides of     the printer paper should be used for the printout.      \value PPK_DocumentName A string describing the document name in     the spooler.      \value PPK_FontEmbedding A boolean value indicating whether data for     the document's fonts should be embedded in the data sent to the     printer.      \value PPK_FullPage A boolean describing if the printer should be     full page or not.      \value PPK_NumberOfCopies Obsolete. An integer specifying the number of     copies. Use PPK_CopyCount instead.      \value PPK_Orientation Specifies a QPrinter::Orientation value.      \value PPK_OutputFileName The output file name as a string. An     empty file name indicates that the printer should not print to a file.      \value PPK_PageOrder Specifies a QPrinter::PageOrder value.      \value PPK_PageRect A QRect specifying the page rectangle      \value PPK_PageSize Obsolete. Use PPK_PaperSize instead.      \value PPK_PaperRect A QRect specifying the paper rectangle.      \value PPK_PaperSource Specifies a QPrinter::PaperSource value.      \value PPK_PaperSources Specifies more than one QPrinter::PaperSource value.      \value PPK_PaperSize Specifies a QPrinter::PaperSize value.      \value PPK_PrinterName A string specifying the name of the printer.      \value PPK_PrinterProgram A string specifying the name of the     printer program used for printing,      \value PPK_Resolution An integer describing the dots per inch for     this printer.      \value PPK_SelectionOption      \value PPK_SupportedResolutions A list of integer QVariants     describing the set of supported resolutions that the printer has.      \value PPK_SuppressSystemPrintStatus Suppress the built-in dialog for showing     printing progress. As of 4.1 this only has effect on Mac OS X where, by default,     a status dialog is shown.      \value PPK_WindowsPageSize An integer specifying a DM_PAPER entry     on Windows.      \value PPK_CustomPaperSize A QSizeF specifying a custom paper size     in the QPrinter::Point unit.      \value PPK_PageMargins A QList<QVariant> containing the left, top,     right and bottom margin values.      \value PPK_CopyCount An integer specifying the number of copies to print.      \value PPK_SupportsMultipleCopies A boolean value indicating whether or not     the printer supports printing multiple copies in one job.      \value PPK_CustomBase Basis for extension. */
+comment|/*!     \enum QPrintEngine::PrintEnginePropertyKey      This enum is used to communicate properties between the print     engine and QPrinter. A property may or may not be supported by a     given print engine.      \value PPK_CollateCopies A boolean value indicating whether the     printout should be collated or not.      \value PPK_ColorMode Refers to QPrinter::ColorMode, either color or     monochrome.      \value PPK_Creator A string describing the document's creator.      \value PPK_Duplex A boolean value indicating whether both sides of     the printer paper should be used for the printout.      \value PPK_DocumentName A string describing the document name in     the spooler.      \value PPK_FontEmbedding A boolean value indicating whether data for     the document's fonts should be embedded in the data sent to the     printer.      \value PPK_FullPage A boolean describing if the printer should be     full page or not.      \value PPK_NumberOfCopies Obsolete. An integer specifying the number of     copies. Use PPK_CopyCount instead.      \value PPK_Orientation Specifies a QPrinter::Orientation value.      \value PPK_OutputFileName The output file name as a string. An     empty file name indicates that the printer should not print to a file.      \value PPK_PageOrder Specifies a QPrinter::PageOrder value.      \value PPK_PageRect A QRect specifying the page rectangle      \value PPK_PageSize Obsolete. Use PPK_PaperSize instead.      \value PPK_PaperRect A QRect specifying the paper rectangle.      \value PPK_PaperSource Specifies a QPrinter::PaperSource value.      \value PPK_PaperSources Specifies more than one QPrinter::PaperSource value.      \value PPK_PaperSize Specifies a QPrinter::PaperSize value.      \value PPK_PrinterName A string specifying the name of the printer.      \value PPK_PrinterProgram A string specifying the name of the     printer program used for printing,      \value PPK_Resolution An integer describing the dots per inch for     this printer.      \value PPK_SelectionOption      \value PPK_SupportedResolutions A list of integer QVariants     describing the set of supported resolutions that the printer has.      \value PPK_WindowsPageSize An integer specifying a DM_PAPER entry     on Windows.      \value PPK_CustomPaperSize A QSizeF specifying a custom paper size     in the QPrinter::Point unit.      \value PPK_PageMargins A QList<QVariant> containing the left, top,     right and bottom margin values.      \value PPK_CopyCount An integer specifying the number of copies to print.      \value PPK_SupportsMultipleCopies A boolean value indicating whether or not     the printer supports printing multiple copies in one job.      \value PPK_CustomBase Basis for extension. */
 end_comment
 begin_comment
 comment|/*!     \fn QPrintEngine::~QPrintEngine()      Destroys the print engine. */
